Updated nostra project for side nav

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="navbar">
         <h1>Nostra</h1>
 
-        <svg class="hamburger-menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+        <svg id="ham-menu" class="hamburger-menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke-width="1.5" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
@@ -46,7 +46,7 @@
     </div>
 
     <!--Side Navbar-->
-    <div class="side-navbar">
+    <div class="side-navbar" id="sid-nav">
         <div class="side-navbar__contents">
             <p><i id="side-navbar__close" style="cursor: pointer; color: white; margin-left: 80%; margin-top: 30px;"
                     class="fa-solid fa-xmark"></i></p>
